# ray-tracing

./: Cargo.toml  Readme.md
examples/: cornell.rs  scene.rs
src/: lib.rs  light.rs  main.rs  material.rs  object.rs  objects.rs  ray.rs  trace.rs  util.rs  utils.rs
src/material/: basic.rs  compose.rs
