[package]
name = "cft_ray_tracer"
version = "0.1.0"
authors = ["cfeitong <cfeitong@gmail.com>"]
edition = "2018"

[dependencies]
approx = "^0.3.0"
rand = "^0.6"

[dev-dependencies]
image = "^0.20"
indicatif = "^0.11"
rayon = "^1"
threadpool = "1.7.1"
parking_lot = "0.7.1"
num_cpus = "1.10.0"

[profile.release]
debug = true
opt-level = 3
lto = true
